--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
@@ -26,12 +26,15 @@
             <div class="card-body">
                 <div class="tab-content" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                        <button class="btn btn-primary float-end" (click)="computePremium()">Compute Premium</button>
+                        <button class="btn btn-primary float-end mt-4 me-4" (click)="computePremium()">Compute Premium</button>
                            
                         <p class="title">{{'gis.policy.policy_details' | translate}}</p>
                            
                     </div>
-                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+                    <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+                        <button type="button" class="btn btn-primary float-end mt-4 me-4">Compute Premium</button>
+
+                    </div>
                     <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">...</div>
                   </div>
             </div>
